--- a/src/assets/styles/containers/App.scss
+++ b/src/assets/styles/containers/App.scss
@@ -1,17 +1,15 @@
 @import '../base/Fonts.scss';
+// @import '../components/Hero.scss';
 @import '../utils/Vars.scss';
 @import '../base/Layout.scss';
 @import '../utils/Animations.scss';
 body {
     margin: 0;
-    background: linear-gradient(154deg, $light-color4,$light-color1);
-    background-size: 200% 200%;
-    -webkit-animation: background 0s ease infinite;
-    -moz-animation: background 0s ease infinite;
-    animation: background 10s ease infinite;
+    // background:black;
 }
 
 #app{
-    display:grid;
-    grid-template-columns: $base-gridmobile;
+    & > div, > section{
+        padding:0 0 5rem 0;
+    }
 }
