--- a/src/assets/styles/components/Header.scss
+++ b/src/assets/styles/components/Header.scss
@@ -3,9 +3,10 @@
     width:100%;
     height: 6rem;
     background:$darkgray-color3;
-    grid-column: 2 / 3;
+    grid-column: 2 / 5;
 }
 .header__pic-logo{
-    width: 25%;
+    width: 100%;
+    max-width:5rem;
     padding: 1rem 0 0 0;
 }
