--- a/src/assets/styles/components/Hero.scss
+++ b/src/assets/styles/components/Hero.scss
@@ -2,12 +2,11 @@
 
 .hero{
     background:$darkgray-color3;
-    grid-column: 2 / 3;
+    grid-column: 2 / 5;
     height: calc(100vh - 10rem);
     display: grid;
     grid-template-columns: 10% 80% 10%;
     grid-row-gap:10px;
-    padding:0 0 5rem 0;
 }
 .hero__content{
     grid-column: 2/3;
@@ -27,11 +26,15 @@
             font-weight: $title-fontweight;
             font-size:3.5rem;
             margin:0;
+            position:relative;
+            & span{
+                position:relative;
+                font-style:italic;
+            }
         }
     } & div:nth-child(2){
         grid-column: 2/6;
         justify-self: center;
-        font-family: $title-hero1;
         text-align:right;
         color:$darkgray-color4;
         display: flex;
@@ -39,16 +42,20 @@
         align-self: center;
         width: 95%;
         height: 15rem;
-        // background-color:$light-color4;
         & h1{
-            display: flex;
             font-size:3.5rem;
             margin:0;
             line-height: 4rem;
             align-self: center;
             z-index:3;
+            position:relative;
+            & span{
+                position:relative;
+                font-family: $title-hero1;
+            }
         }
     }& div:nth-child(3){
+        position:relative;
         grid-column: 1/5;
         font-family: $title-hero2;
         color:$darkgray-color4;
@@ -57,14 +64,18 @@
         justify-self: center;
         width: 95%;
         height: 15rem;
-        background-color:$light-color4;
+        // background-color:$light-color4;
         & h1{
-            display: flex;
             font-size:3.5rem;
             margin:0;
             line-height: 4rem;
             align-self: center;
             z-index:4;
+            position:relative;
+            & span{
+                position:relative;
+                font-family: $title-hero2;
+            }
         }
     }& div:nth-child(4){
         grid-column: 5/6;
@@ -78,6 +89,11 @@
             font-size:3.5rem;
             margin:0;
             z-index:5;
+            position:relative;
+            & span{
+                position:relative;
+                font-style:italic;
+            }
         }
     }
 }
