--- a/src/assets/styles/utils/Vars.scss
+++ b/src/assets/styles/utils/Vars.scss
@@ -34,6 +34,9 @@ $darkgray-color2: #3F5369;
 $darkgray-color3: #2A384C;
 $darkgray-color4: #1B2237;
 
+$white-color: #fff;
+$black-color: #0e0e0e;
+
 /**
 * texture-colors
 */
@@ -55,7 +58,7 @@ $base-font: 'Noto Sans KR', sans-serif;
 $base-fontsize: 1rem;
 $text-fontweight: 400;
 $anchor-fontweight: 500;
-$utils-fontweight: 700;
+$utils-fontweight: 900;
 
 /**
 * Buttons
@@ -63,14 +66,14 @@ $utils-fontweight: 700;
 $button-padding: 10px;
 $button-margin: 1.5rem;
 $button-fontsize: $base-fontsize * 1.5;
-$button-borderradius: 50px;
+$button-borderradius: 10px;
 $button-outlinebackground:rgba(255, 255, 255, .5);
 
 /**
 * Grids
 */
 
-$base-gridmobile: 3% 94% 3%;
+$base-gridmobile: 2% repeat(3, 32%) 2%;
 $hero-gridmobile: 10% repeat(4, 20%) 10%;
 
 /**
