Corrección en banner

--- a/src/assets/styles/base/Buttons.scss
+++ b/src/assets/styles/base/Buttons.scss
@@ -7,6 +7,7 @@
     box-shadow: 0px 0px 0px 1px $black-color;
     color: white;
     -webkit-text-stroke: 1px $black-color;
+    text-shadow: 0px 3px 3px $text-shadow;
     padding: 7px 25px;
     text-align: center;
     text-decoration: none;
