--- a/src/assets/styles/utils/Vars.scss
+++ b/src/assets/styles/utils/Vars.scss
@@ -36,6 +36,7 @@ $darkgray-color4: #1B2237;
 
 $white-color: #fff;
 $black-color: #0e0e0e;
+$text-shadow:rgba(0, 0, 0, 0.5);
 
 /**
 * texture-colors
