--- a/src/assets/styles/base/Fonts.scss
+++ b/src/assets/styles/base/Fonts.scss
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Carter+One&family=Merriweather+Sans:ital,wght@1,800&family=Noto+Sans+KR:wght@400;500;700;900&family=Press+Start+2P&display=swap');
 @import '../utils/Vars.scss';
 
+h1::selection {
+    color: none;
+    background: none;
+}
+/* For Mozilla Firefox */
+h1::-moz-selection {
+    color: none;
+    background: none;
+}
 h2, h3, h4, h5, h6{font-family: $title-font;}
  p, span, input, a, textarea {font-family: $base-font;}
