--- a/src/assets/styles/components/Header.scss
+++ b/src/assets/styles/components/Header.scss
@@ -4,9 +4,11 @@
     height: 6rem;
     background:$darkgray-color3;
     grid-column: 2 / 5;
+    display:flex;
+    justify-content:space-between;
 }
 .header__pic-logo{
     width: 100%;
     max-width:5rem;
-    padding: 1rem 0 0 0;
+    padding: 1rem 0 0 .5rem;
 }
