--- a/src/assets/styles/components/Hero.scss
+++ b/src/assets/styles/components/Hero.scss
@@ -20,13 +20,17 @@
         transform-origin: 50% 50%;
         align-self:flex-end;
         height: 5rem;
-        color:$light-color4;
+        color:$dark-color1;
+        text-shadow:-5px -2px $light-color4;
         z-index:2;
+        position:relative;
         & h1{
             font-weight: $title-fontweight;
             font-size:3.5rem;
             margin:0;
-            position:relative;
+            position:absolute;
+            left: -90px;
+            bottom: -55px;
             & span{
                 position:relative;
                 font-style:italic;
@@ -36,17 +40,19 @@
         grid-column: 2/6;
         justify-self: center;
         text-align:right;
-        color:$darkgray-color4;
+        color:$color-brand;
+        text-shadow:-5px 2px $darkgray-color4;
         display: flex;
-        justify-content: center;
         align-self: center;
         width: 95%;
         height: 15rem;
+        position:relative;
         & h1{
-            font-size:3.5rem;
+            letter-spacing: 8px;
+            font-size:4.5rem;
             margin:0;
             line-height: 4rem;
-            align-self: center;
+            align-self: flex-end;
             z-index:3;
             position:relative;
             & span{
@@ -57,24 +63,23 @@
     }& div:nth-child(3){
         position:relative;
         grid-column: 1/5;
-        font-family: $title-hero2;
-        color:$darkgray-color4;
+        color:$color-brand;
+        text-shadow:-5px 2px $darkgray-color4;
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         justify-self: center;
         width: 95%;
         height: 15rem;
-        // background-color:$light-color4;
         & h1{
-            font-size:3.5rem;
+            letter-spacing: 8px;
+            font-size:4.5rem;
             margin:0;
             line-height: 4rem;
-            align-self: center;
             z-index:4;
             position:relative;
             & span{
                 position:relative;
-                font-family: $title-hero2;
+                font-family: $title-hero1;
             }
         }
     }& div:nth-child(4){
@@ -83,13 +88,17 @@
         transform:rotate(90deg);
         transform-origin: 50% 50%;
         height: 5rem;
-        color:$light-color4;
+        text-shadow:5px 0 $light-color4;
+        color:$dark-color1;
+        position:relative;
         & h1 {
             font-weight: $title-fontweight;
             font-size:3.5rem;
             margin:0;
             z-index:5;
-            position:relative;
+            position:absolute;
+            left: -25px;
+            bottom: -15px;
             & span{
                 position:relative;
                 font-style:italic;
