--- a/src/assets/styles/components/Pixels.scss
+++ b/src/assets/styles/components/Pixels.scss
@@ -7,6 +7,7 @@
     bottom:0;
     left:0;
     width:100% !important;
+    opacity:.9;
     &-canvas{
         // position:absolute;
         top:0;
