--- a/src/assets/styles/base/Buttons.scss
+++ b/src/assets/styles/base/Buttons.scss
@@ -1,13 +1,6 @@
 @import '../utils/Vars.scss';
 .btn {
     border: none;
-    border-top:4px solid;
-    border-bottom:5px solid;
-    border-radius: $button-borderradius;
-    box-shadow: 0px 0px 0px 1px $black-color;
-    color: white;
-    -webkit-text-stroke: 1px $black-color;
-    text-shadow: 0px 3px 3px $text-shadow;
     padding: 7px 25px;
     text-align: center;
     text-decoration: none;
@@ -15,12 +8,21 @@
     font-size: $button-fontsize;
     font-family: $base-font; 
     font-weight:$utils-fontweight;
+    cursor: pointer;
+    border-radius: $button-borderradius;
+    color: white;
+}
+.cta{
+    box-shadow: 0px 0px 0px 1px $black-color;
+    min-width: 8rem;
     transform: skew(10deg);
     -ms-transform: skewX(10deg);
     -webkit-transform: skewX(10deg);
-    cursor: pointer;
-    min-width: 8rem;
     position: relative;
+    border-top:4px solid;
+    border-bottom:5px solid;
+    -webkit-text-stroke: 1px $black-color;
+    text-shadow: 0px 3px 3px $text-shadow;
     &:after{
         content:'';
         border-radius: $button-borderradius;
@@ -39,7 +41,7 @@
     }
 }
 .btn.outline{
-    border:1px solid;
+    border:4px solid;
     background-color: $button-outlinebackground;
 }
 
@@ -50,7 +52,9 @@
 .secondary{ background-color:$light-color1}
 .tertiary{background-color:$lightgray-color4}
 
+// .outline{background-color:$button-transparency;}
 .outline.primary{ border-color:$complementary-color1}
 .outline.secondary{ border-color:$light-color1}
 .outline.tertiary{border-color:$lightgray-color4}
+
 
