--- a/src/assets/styles/base/Fonts.scss
+++ b/src/assets/styles/base/Fonts.scss
@@ -11,4 +11,11 @@ h1::-moz-selection {
     background: none;
 }
 h2, h3, h4, h5, h6{font-family: $title-font;}
- p, span, input, a, textarea {font-family: $base-font;}
+h2{color:$darkgray-color2;}
+h3{color: $darkgray-color3;}
+p, input, textarea {
+    font-family: $base-font;
+    color:$darkgray-color1;
+}
+span, a {font-family: $base-font;}
+
