--- a/src/assets/styles/components/Hero.scss
+++ b/src/assets/styles/components/Hero.scss
@@ -15,7 +15,6 @@
     grid-row-gap:10px;
     & div:nth-child(1){
         grid-column: 1/2;
-        font-family: $title-font;
         transform:rotate(-90deg);
         transform-origin: 50% 50%;
         align-self:flex-end;
@@ -25,15 +24,15 @@
         z-index:2;
         position:relative;
         & h1{
-            font-weight: $title-fontweight;
+            letter-spacing: 8px;
             font-size:3.5rem;
             margin:0;
             position:absolute;
-            left: -90px;
-            bottom: -55px;
+            left: -120px;
+            bottom: -45px;
             & span{
                 position:relative;
-                font-style:italic;
+                font-family: $title-hero1;
             }
         }
     } & div:nth-child(2){
@@ -84,7 +83,6 @@
         }
     }& div:nth-child(4){
         grid-column: 5/6;
-        font-family: $title-font;
         transform:rotate(90deg);
         transform-origin: 50% 50%;
         height: 5rem;
@@ -92,16 +90,16 @@
         color:$dark-color1;
         position:relative;
         & h1 {
-            font-weight: $title-fontweight;
+            letter-spacing: 8px;
             font-size:3.5rem;
             margin:0;
             z-index:5;
             position:absolute;
-            left: -25px;
+            left: -5px;
             bottom: -15px;
             & span{
+                font-family: $title-hero1;
                 position:relative;
-                font-style:italic;
             }
         }
     }
