--- a/src/assets/styles/components/LeftBoxDesc.scss
+++ b/src/assets/styles/components/LeftBoxDesc.scss
@@ -1,11 +1,13 @@
 @import '../utils/Vars.scss';
+
 .description__boxleft{
     display:grid;
     grid-column:1/4;
     grid-template-columns: repeat(3, 1fr);
-    margin: 0 0 1.5rem 1rem;
+    margin: 0 0 4rem 1rem;
     border-radius:20px 0 0 0;
-    box-shadow: -10px 5px 10px 3px $darkgray-color4;
+    box-shadow: 0px 5px 5px 3px $shadow-color;
+    text-decoration:none;
     &-imagebox{
         grid-column:3/4;
         grid-row:1/3;
@@ -20,14 +22,19 @@
         min-height:4rem;
         max-height: 6rem;
         background:$lightgray-color3;
-        // margin: 0 0 1rem 0;
         border-radius: 20px 0 0;
         padding:.5rem;
+        & h2 {
+            text-align:right;
+        }
     }
     &-textbox{
         padding:.5rem;
         grid-column:1/3;
-        min-height:8rem;
+        min-height:4rem;
         background:$white-color;
+        // & p{
+        //     color:$darkgray-color1;
+        // }
     }
 }
