--- a/src/assets/styles/components/RightBoxDesc.scss
+++ b/src/assets/styles/components/RightBoxDesc.scss
@@ -3,9 +3,10 @@
     display:grid;
     grid-column:1/4;
     grid-template-columns: repeat(3, 1fr);
-    margin:  0 1.5rem 1rem 0;
-    border-radius:0 20px 20px 0;
-    box-shadow: 0 5px 5px 5px $darkgray-color4;
+    margin:  0 1.5rem 4rem 0;
+    border-radius:0 20px 0px 0;
+    box-shadow: 0 5px 5px 5px $shadow-color;
+    text-decoration:none;
     &-imagebox{
         grid-column:1/2;
         grid-row:1/3;
@@ -17,13 +18,15 @@
     }
     &-subtitlebox{
         grid-column:2/4;
-        min-height:4rem;
+        min-height:2rem;
         background:$lightgray-color3;
         border-radius: 0 20px 0 0;
+        padding:.5rem;
     }
     &-textbox{
         grid-column:2/4;
-        min-height:8rem;
+        min-height:4rem;
         background:$white-color;
+        padding:.5rem;
     }
 }
