--- a/src/assets/styles/utils/Vars.scss
+++ b/src/assets/styles/utils/Vars.scss
@@ -37,6 +37,9 @@ $darkgray-color4: #1B2237;
 $white-color: #fff;
 $black-color: #0e0e0e;
 $text-shadow:rgba(0, 0, 0, 0.5);
+$shadow-color:rgba(27, 35, 55, 0.5);
+
+
 
 /**
 * texture-colors
@@ -68,7 +71,7 @@ $button-padding: 10px;
 $button-margin: 1.5rem;
 $button-fontsize: $base-fontsize * 1.5;
 $button-borderradius: 10px;
-$button-outlinebackground:rgba(255, 255, 255, .5);
+$button-outlinebackground:rgba(255, 255, 255, .2);
 
 /**
 * Grids
