--- a/src/assets/styles/containers/App.scss
+++ b/src/assets/styles/containers/App.scss
@@ -15,9 +15,24 @@ body {
     }
 }
 
-@media only screen and (orientation:portrait){
-  body {
-    height: 100vw;
-    transform: rotate(90deg);
+// @media only screen and (orientation:landscape){
+//   body {
+//     // height: 100vw;
+//     transform: rotate(90deg);
+//   }
+// }
+
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+  html {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+  body{
+      height:100vw
   }
 }
