--- a/src/assets/styles/components/CenterBoxDesc.scss
+++ b/src/assets/styles/components/CenterBoxDesc.scss
@@ -4,10 +4,13 @@
     grid-column:1/4;
     display:grid;
     grid-template-columns:repeat(3, 1fr);
-    margin:0 1rem 4rem;
+    margin:0 1rem 1.5rem;
     border-radius:20px;
     box-shadow: 0px 5px 10px 3px $shadow-color;
     &-imagebox{
+        padding:0.5rem 1rem;
+        background-repeat: no-repeat;
+        background-size:cover;
         grid-column:1/4;
         background:$complementary-color3;
         min-height:3rem;
@@ -18,6 +21,6 @@
         min-height:3rem;
         grid-column:1/4;
         background-color:$white-color;
-        padding:.5rem;
+        padding:.5rem 1rem;
     }
 }
