--- a/src/assets/styles/components/GralDescription.scss
+++ b/src/assets/styles/components/GralDescription.scss
@@ -2,7 +2,6 @@
 
 .description__container{
     margin:3rem 0 0 0;
-    grid-column: 2/5;
     display:grid;
     grid-template-columns: repeat(3, 1fr);
     background-color:$darkgray-color3;
@@ -11,12 +10,33 @@
         background:$complementary-color4;
         border-radius:100px 0 0 100px;
         margin: 0 0 2rem 0;
+        min-height: 7rem;
+        &.titleSection{
+            display:flex;
+            justify-content:center;
+            align-items:center;
+            & h1 {
+                font-size:2rem;
+                font-family:$title-font;
+                font-weight:$title-fontweight;
+                color:$darkgray-color3;
+                // -webkit-text-stroke:1px $dark-color3;
+                text-shadow: 2px 1px 1px $light-color1;
+                letter-spacing:1px;
+            }
+        }
     }
     &-titlebox{
         text-align:center;
         grid-column:1/4;
         background:$lightgray-color4;
-        margin: 0 0 1rem 0;
+        margin: 2.5rem 0 1rem 0;
+        background-repeat: no-repeat;
+        background-size:cover;
+        background-position:center;
+        & hr{
+            width:90%
+        }
     }
     &-subtitle{
         text-align:center;
@@ -31,8 +51,12 @@
             border-radius:20px 0 0 20px;    
         }
     }
+    p{
+        padding:0 1rem;
+        grid-column:1/4; 
+}
 
-    
+
 }
 .profile-pic{
     max-width:8rem;
