--- a/src/assets/styles/components/LeftBoxDesc.scss
+++ b/src/assets/styles/components/LeftBoxDesc.scss
@@ -20,19 +20,25 @@
     &-subtitlebox{
         grid-column:1/3;
         min-height:4rem;
-        max-height: 6rem;
-        background:$lightgray-color3;
+        // max-height:10rem;
+        background-color:$darkgray-color4;
+        background-repeat:no-repeat;
+        background-size:cover;
         border-radius: 20px 0 0;
-        padding:.5rem;
-        & h2 {
-            text-align:right;
-        }
+        padding:0 .5rem .5rem;
+        & h2 {text-align:right; margin-bottom:0;}
+        // & h2{text-align:right; margin:.5rem 0 0 0;}
+        & h3 {text-align:right; margin:.5rem 0 0 0;}
     }
     &-textbox{
         padding:.5rem;
         grid-column:1/3;
         min-height:4rem;
         background:$white-color;
+        & ul {
+            list-style-type:square;
+            padding-inline-start: 20px;
+        }
         // & p{
         //     color:$darkgray-color1;
         // }
