--- a/src/assets/styles/containers/App.scss
+++ b/src/assets/styles/containers/App.scss
@@ -1,38 +1,39 @@
 @import '../base/Fonts.scss';
-// @import '../components/Hero.scss';
 @import '../utils/Vars.scss';
-@import '../base/Layout.scss';
-@import '../utils/Animations.scss';
-body {
-    margin: 0;
-    background:$darkgray-color3;
+
+body {margin: 0;}
+
+h1::selection {
+    color: none;
+    background: none;
 }
 
-#app{
-    padding:6rem 0 0 0;
-    & > div, > section{
-        padding:0 0 5rem 0;
-    }
+/* For Mozilla Firefox */
+h1::-moz-selection {
+    color: none;
+    background: none;
 }
+h1.texture{color:$white-color}
+h1.hero-title__container{
+    font-family: $title-hero1;
+    font-weight: 800;
+}
+h2, h3, h4, h5, h6{font-family: $title-font;}
+h2.texture,h3.texture{color:$lightgray-color4}
 
-// @media only screen and (orientation:landscape){
-//   body {
-//     // height: 100vw;
-//     transform: rotate(90deg);
-//   }
-// }
+p, input, textarea, li {
+    font-family: $base-font;
+    color:$darkgray-color1;
+}
+ul{
+    list-style-type:none;
+    padding:0;
+}
+a {font-family: $base-font;}
+a.link {color: $color-info}
 
-// @media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
-//   html {
-//     transform: rotate(-90deg);
-//     transform-origin: left top;
-//     width: 100vh;
-//     overflow-x: hidden;
-//     position: absolute;
-//     top: 100%;
-//     left: 0;
-//   }
-//   body{
-//       height:100vw
-//   }
+// @media (min-width: 960px){
+//     p, input, textarea {
+//         font-size:1.3rem;
+//     }
 // }
